examples/test/testpolicy4426.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4426
  namespace: namespace174
spec:
  podSelector:
    matchLabels:
      key35: value48
      key16: value43
      key5: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value32
          key6: value49
      podSelector:
        matchLabels:
          key25: value12
